refactor ProposedAction
The ProposedAction record was difficult to use (a long list of weird
nullable values with unclear semantics), and tied more to EditTool in
particular than it ought to be. Now it's an interface instead, and
a new StandardAction class provides a standard implementation of
general edits with a cleaner interface for specifying what to do
and which feedback to show.